# state-filter

./: .clinerules  .gitignore  README.md  pyproject.toml  requirements.txt
artifact/: implementation_plan.html  implementation_plan.md  library_usage_guide.html  library_usage_guide.md  spec.md  walkthrough.html  walkthrough.md
docs/: options_example.json  spec.md
scratch/: options.json  prepare_data.py
src/state_filter/: __init__.py  cli.py  geo.py  pasta.py
src/state_filter/data/: bounding_boxes.json
tests/: test_cli.py  test_geo.py  test_pasta.py
