[project]
authors = [{name = "Mark Servilla", email = "mark.servilla@gmail.com"}]
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "shapely>=2.0.0",
    "defusedxml>=0.7.1"
]
name = "state-filter"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
state-filter = "state_filter.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
pytest = ">=7.0.0"
ruff = ">=0.1.0"
click = ">=8.1.0"
requests = ">=2.31.0"
shapely = ">=2.0.0"
defusedxml = ">=0.7.1"

[tool.pixi.pypi-dependencies]
state_filter = { path = ".", editable = true }

[tool.pixi.tasks]
test = "pytest"
lint = "ruff check"
format = "ruff format"

